Updated pagination to wrap if wider than page width. Added indicator for correct/incorrect answers. Updated so last question no longer shows alert that you finished with the quiz, but instead goes back to the first incorrect question.

--- a/css/styles.css
+++ b/css/styles.css
@@ -10,3 +10,18 @@ body{
     margin-right: 0;
     margin-left: 0;
 }
+
+.pagination {
+    flex-wrap: wrap;
+}
+
+.incorrect{
+    color: #fff;
+    background-color: #dc3545;
+    border-color: #dc3545;
+}
+
+.answerCorrect{
+    color: #28a745;
+    border-color: #28a745;
+}
